Docs: removing stray pivotal reference

--- a/gpdb-doc/book/master_middleman/source/subnavs/gpdb-landing-subnav.erb
+++ b/gpdb-doc/book/master_middleman/source/subnavs/gpdb-landing-subnav.erb
@@ -3,7 +3,7 @@
   <div class="nav-content">
     <ul>
       <li>
-        <a href="/docs/600/common/gpdb-features.html">Pivotal Greenplum&reg; 6.0.0 Documentation</a>
+        <a href="/docs/600/common/gpdb-features.html">Greenplum Database 6.0.0 Documentation</a>
       </li>
       <li>
          <a href="/docs/600/admin_guide/admin_guide.html">Administrator Guide</a>
