--- a/gpdb-doc/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/gpdb-doc/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -6,7 +6,7 @@
         <a href="/docs/600/homenav.html">Greenplum Database Docs Home</a>
       </li>
       <li class="has_submenu">
-        <a href="/docs/600/pxf/overview_pxf.html" format="markdown">PXF Extension Framework</a>
+        <a href="/docs/600/pxf/overview_pxf.html" format="markdown">Greenplum Platform Extension Framework (PXF)</a>
         <ul>
           <li>
             <a href="/docs/600/pxf/intro_pxf.html" format="markdown">PXF Architecture</a>
@@ -15,21 +15,21 @@
             <a href="/docs/600/pxf/instcfg_pxf.html" format="markdown">Installing and Configuring PXF</a>
             <ul>
               <li>
-                <a href="/docs/600/pxf/client_instcfg.html" format="markdown">Installing and Configuring Clients for PXF</a>
+                <a href="/docs/600/pxf/client_instcfg.html" format="markdown">Installing and Configuring Hadoop Clients for PXF</a>
               </li>
               <li>
-                <a href="/docs/600/pxf/cfginitstart_pxf.html" format="markdown">Configuring, Initializing, and Starting PXF</a>
+                <a href="/docs/600/pxf/cfginitstart_pxf.html" format="markdown">Configuring, Initializing, and Managing PXF</a>
               </li>
             </ul>
           </li>
-          <li>
-            <a href="/docs/600/pxf/upgrade_pxf.html" format="markdown">Upgrading PXF</a>
-          </li>
-         <li>
+        <li>
+           <a href="/docs/600/pxf/upgrade_pxf.html" format="markdown">Upgrading PXF</a>
+        </li>
+        <li>
            <a href="/docs/600/pxf/using_pxf.html" format="markdown">Using PXF</a>
         </li>
         <li class="has_submenu">
-           <a href="/docs/600/pxf/hdfs_read_pxf.html" format="markdown">Reading HDFS File Data with PXF</a>
+           <a href="/docs/600/pxf/hdfs_read_pxf.html" format="markdown">Reading Data from HDFS with PXF</a>
             <ul>
          <li>
            <a href="/docs/600/pxf/hdfs_read_pxf.html#profile_hdfstextsimple" format="markdown">Reading Text Files</a>
@@ -41,6 +41,9 @@
            <a href="/docs/600/pxf/hdfs_read_pxf.html#profile_hdfsavro" format="markdown">Reading Avro Files</a>
         </li>
             </ul>
+        </li>
+        <li>
+           <a href="/docs/600/pxf/hdfs_write_pxf.html" format="markdown">Writing Data to HDFS with PXF</a>
         </li>
         <li>
            <a href="/docs/600/pxf/hive_pxf.html" format="markdown">Accessing Hive Table Data with PXF</a>
