--- a/gpdb-doc/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/gpdb-doc/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -15,6 +15,9 @@
             <a href="/docs/600/pxf/instcfg_pxf.html" format="markdown">Installing and Configuring PXF</a>
             <ul>
               <li>
+                <a href="/docs/600/pxf/pxfuserimpers.html">Configuring User Impersonation and Proxying</a>
+              </li>
+              <li>
                 <a href="/docs/600/pxf/client_instcfg.html" format="markdown">Installing and Configuring Hadoop Clients for PXF</a>
               </li>
               <li>
